<?xml version="1.0" encoding="utf-8"?>
<resources 
    xmlns:tools="http://schemas.android.com/tools" 
    tools:ignore="MissingTranslation" 
    >

    <string name="app_name">DaisyBook Reader</string>
    <string name="atBegin">At the beginning of </string>
    <string name="atEnd">At the end of </string>
    <string name="bookmarks">Bookmarks</string>
    <string name="brightness">Brightness</string>
    <string name="color_picker_viewer">Color Viewer(Click to choose another color)</string>
    <string name="change_text_color">Text color</string>
    <string name="change_background_color">Background color</string>
    <string name="change_highlight_color">Highlight color</string>
    <string name="change_number_recent_books">Number of recent books</string>
    <string name="change_number_bookmarks">Number of bookmarks</string>
    <string name="chapter">Chapter</string>
    <string name="cancel_bookmark">Cancel</string>
    <string name="desc_simple_mode">This mode is designed specifically for blind, low vision, and print disabled user</string>
    <string name="desc_visual_mode">In the graphical mode, all menus are vocalized and include large, graphical elements</string>
    <string name="error_title">DaisyReader - Message</string>
    <string name="error_no_path_found">Not found %s on SD card. Please check again</string>
    <string name="error_wrong_format">The daisy book has the wrong format</string>
    <string name="error_wrong_format_audio">The audio files in this DAISY book are not supported by this application</string>
    <string name="error_not_enough_space">There is not enough available storage to download this book</string>
    <string name="error_no_audio_found">We cannot find the audio for the current chapter</string>
    <string name="error_no_text_found">We cannot find text for the current chapter</string>
    <string name="error_parse_file_ncc">Could not read the master file for this book %s</string>
    <string name="error_connect_internet">Please check your Internet connection again</string>
    <string name="error_cannot_dowload">The download is not successfully, please try it again</string>
    <string name="error_unknown_host">Please check the host name again</string>
    <string name="error_file_not_found">The download file is invalid, please check again</string>
    <string name="error_save_bookmark">We cannot save bookmark at the end of %s</string>
    <string name="empty_bookmark">Empty</string>
    <string name="fontSize">Font Size: </string>
    <string name="load_bookmark">Load</string>
    <string name="menu_title">Menu</string>
    <string name="message_bookmark">Choosing options</string>
    <string name="message_exit_application">Press the Back button to exit</string>
    <string name="message_downloading_file">Downloading file &#x2026;</string>
    <string name="message_confirm_exit_download">Are you sure you want to exit download?</string>
    <string name="night_mode">Night Mode</string>
    <string name="next_section">Next section</string>
    <string name="next_sentence">Next sentence</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="previous_sentence">Previous sentence</string>
    <string name="previous_section">Previous section</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="title_activity_daisy_reader_library">Library</string>
    <string name="title_activity_daisy_ebook_reader">Select which mode of player to use</string>
    <string name="title_activity_daisy_ebook_reader_simple_mode">Simple Mode</string>
    <string name="title_activity_daisy_reader_table_of_contents">Table Of Contents</string>
    <string name="title_activity_daisy_ebook_reader_visual_mode">Visual Mode</string>
    <string name="title_activity_daisy_reader_setting">Settings</string>
    <string name="title_activity_daisy_reader_bookmark">Bookmarks</string>
    <string name="title_activity_daisy_reader_recent_book">Recent Book</string>
    <string name="title_activity_daisy_reader_scan_book">Scan on Sd card</string>
    <string name="test_fontsize">ABCDEF</string>
    <string name="toggle_turn_on">Turn On</string>
    <string name="toggle_turn_off">Turn Off</string>
    <string name="sd_card_not_present">Not found SD card in the phone</string>
    <string name="space">\u0020</string>
    <string name="scan_books">Scan Books</string>
    <string name="simple_mode">SIMPLE mode</string>
    <string name="save_bookmark">Save</string>
    <string name="search_text">Search Text</string>
    <string name="recent_books">Recent Books</string>
    <string name="unzipping">Unzipping</string>
    <string name="visual_mode">VISUAL mode</string>
    <string name="waiting">Waiting &#x2026;</string>
    <string name="web_site_name_daisy_org">The DAISY Consortium</string>
    <string name="web_site_url_daisy_org">http://www.daisy.org/sample-content</string>
    <string name="web_site_name_htctu">The High Tech Center Training Unit</string>
    <string name="web_site_url_htctu">http://www.htctu.net/demos</string>
    <string name="download_books">Download Books</string>
    <string name="downloaded_books">Downloaded Books</string>
    <string name="download_sites">Download Sites</string>
    <string name="search">Search</string>
    <string name="logo_of_book">Logo Book</string>
    <string name="author">Author:</string>
    <string name="produced_date">Produced Date:</string>
    <string name="publisher">Publisher:</string>
    <string name="submenu_library">Library</string>
    <string name="submenu_table_of_contents">Table Of Contents</string>
    <string name="submenu_search">Search</string>
    <string name="submenu_simple_mode">Simple Mode</string>
    <string name="submenu_bookmarks">Bookmarks</string>
    <string name="submenu_settings">Settings</string>
	<string name="copyright">© 2013 DaisyBook Reader. All Rights Reserved.</string>
</resources>