<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Single menu item
         Set id, icon and Title for each menu item
    -->
    <item android:id="@+id/menu_library"
          android:icon="@drawable/library"
          android:title="@string/submenu_library" />
    
    <item android:id="@+id/menu_table"
          android:icon="@drawable/table_of_contents"
          android:title="@string/submenu_table_of_contents" />
 
    <item android:id="@+id/menu_simple"
          android:icon="@drawable/simple_mode"
          android:title="@string/submenu_simple_mode" />
 
    <item android:id="@+id/menu_search"
          android:icon="@drawable/search"
          android:title="@string/submenu_search" />
 
    <item android:id="@+id/menu_bookmarks"
          android:icon="@drawable/bookmark"
          android:title="@string/submenu_bookmarks" />
 
    <item android:id="@+id/menu_settings"
          android:icon="@drawable/settings"
          android:title="@string/submenu_settings" />
</menu>