<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo_of_book" />

        <Button
            android:id="@+id/btnRecentBooks"
            android:layout_width="fill_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/imageButton1"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_recent_48x48"
            android:text="@string/recent_books"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnScanBooks"
            android:layout_width="fill_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/btnRecentBooks"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_scan_48x48"
            android:text="@string/scan_books"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDownloadBooks"
            android:layout_width="fill_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/btnScanBooks"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_download_48x48"
            android:text="@string/download_books"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnDownloadBooks"
            android:layout_marginTop="30dp"
            android:text="@string/copyright" />

    </RelativeLayout>

</ScrollView>