<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:background="@drawable/selector_textview"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <ImageView
        android:id="@+id/daisy_book_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/logo_of_book"
        android:src="@raw/ic_book" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/daisy_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/daisy_book_view_author"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:singleLine="true"
                android:text="@string/author"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" >
            </TextView>

            <TextView
                android:id="@+id/daisy_book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daisy_book_view_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:singleLine="true"
                android:text="@string/produced_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" >
            </TextView>

            <TextView
                android:id="@+id/daisy_book_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daisy_book_view_publisher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:singleLine="true"
                android:text="@string/publisher"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" >
            </TextView>

            <TextView
                android:id="@+id/daisy_book_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>